--- a/profil.html
+++ b/profil.html
@@ -1,32 +1,28 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    script-src 'self' 'unsafe-inline';
-    style-src 'self' 'unsafe-inline';
-    img-src 'self' data:;
-  ">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Assistenku -- Profil</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Assistenku — Profil</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body data-page="profil">
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="logo.png" alt="Logo" class="logo-img">
-        <div>
+        <img src="logo.png" alt="Assistenku Logo" class="logo-img" />
+        <div class="brand-text">
           <div class="logo-text">ASSISTENKU</div>
           <div class="tagline">Layanan Asisten Profesional</div>
         </div>
       </div>
+
       <div class="controls">
         <button class="dark-toggle">🌙</button>
         <button id="menuIcon" class="menu-icon">☰</button>
       </div>
     </div>
+
     <nav id="mainNav" class="main-nav">
       <a href="index.html">Beranda</a>
       <a href="profil.html" class="active">Profil</a>
@@ -37,47 +33,40 @@
   </header>
 
   <main class="container">
-    <section class="page-header">
-      <h1>Tentang Perusahaan</h1>
-      <p class="lead">Profil lengkap, sejarah, dan informasi legal Assistenku.</p>
+    <section class="section page-header">
+      <h1>Tentang Assistenku</h1>
+      <p class="lead">Profil perusahaan, sejarah, founder, dan dokumen legal.</p>
     </section>
 
-    <section class="content">
-      <h2>Sejarah</h2>
-      <p>Assistenku dimulai sebagai inisiatif komunitas untuk meningkatkan kualitas tenaga pendukung rumah tangga.
-      Berfokus pada pelatihan soft-skill, safety, dan etika kerja, kami berkembang menjadi platform profesional
-      yang melayani rumah tangga dan institusi.</p>
+    <section class="section content">
+      <h2>Sejarah Perusahaan</h2>
+      <p>Assistenku dimulai sebagai layanan komunal yang menyediakan tenaga terlatih untuk kebutuhan rumah tangga. Dengan visi meningkatkan kualitas layanan,
+      kami memperkenalkan standar SOP dan pelatihan internal sejak tahun pertama operasi.</p>
 
-      <h2>Nilai Perusahaan</h2>
-      <ol>
-        <li>Profesionalisme</li>
-        <li>Keamanan & Kepercayaan</li>
-        <li>Pelayanan Ramah</li>
-      </ol>
-
-      <h2>Founder</h2>
+      <h2>Founder & Team</h2>
       <div class="founder-detail">
-        <img src="nib1.png" alt="Founder Image" class="founder-img">
+        <img src="nib1.png" alt="Founder" class="founder-img" />
         <div>
           <h3>Nama Founder</h3>
-          <p>Founder berpengalaman dalam operasional & layanan, visioner dalam pengembangan SDM.</p>
-          <p><strong>Kontak Founder:</strong> founder@assistenku.com</p>
+          <p>Berpengalaman dalam manajemen layanan & HR. Fokus pada pengembangan SDM dan layanan berkualitas.</p>
+          <p><strong>Kontak:</strong> founder@assistenku.com</p>
         </div>
       </div>
 
       <h2>Legal & NIB</h2>
-      <p>Dokumen legal perusahaan disimpan dan dapat ditunjukkan (lihat `nib1.png` dan `nib2.png`).</p>
+      <p>Dokumen legal tersedia: <em>nib1.png</em> dan <em>nib2.png</em>. Simpanan dokumen fisik dan digital kami jaga keamanan serta dapat ditunjukkan bila diperlukan.</p>
 
-      <h2>Komitmen Mutu</h2>
-      <p>Kami melakukan evaluasi berkala terhadap tenaga kerja, memberikan pelatihan tambahan, serta
-      melakukan monitoring layanan untuk memastikan kualitas terjaga.</p>
+      <h2>Nilai & Komitmen</h2>
+      <ol>
+        <li>Etika kerja tinggi</li>
+        <li>Keamanan & privasi klien</li>
+        <li>Penjaminan kualitas layanan</li>
+      </ol>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 Assistenku</p>
-    </div>
+    <div class="container"><p>© 2025 Assistenku</p></div>
   </footer>
 
   <script src="script.js"></script>
