--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Assistenku — Beranda</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- no external analytics here to keep CSP simple -->
 </head>
 <body data-page="index">
-  <header class="site-header">
+  <header class="site-header floating">
     <div class="container header-inner">
       <div class="brand">
         <img src="logo.png" alt="Assistenku Logo" class="logo-img" />
@@ -39,9 +38,8 @@
         <div class="hero-copy">
           <h1>Tenaga Profesional untuk Kebutuhan Sehari-hari Anda</h1>
           <p class="lead">
-            Assistenku menyediakan layanan tenaga rumah tangga, perawat lansia, baby sitter, sopir pribadi, dan
-            tenaga pendukung profesional lainnya. Proses seleksi ketat, pelatihan standar, dan layanan
-            dengan kontrak fleksibel (per jam / harian / bulanan).
+            Assistenku menyediakan tenaga rumah tangga, perawat lansia, baby sitter, sopir pribadi, dan tenaga pendukung profesional
+            lainnya. Seleksi ketat, pelatihan standar, dan kontrak fleksibel (per jam / harian / bulanan).
           </p>
           <div class="hero-cta">
             <a class="btn primary" href="layanan.html">Lihat Layanan</a>
@@ -51,9 +49,8 @@
           <blockquote class="welcome">
             <strong>Kata Sambutan Founder</strong>
             <p>
-              "Kami percaya bahwa kualitas layanan dimulai dari kualitas SDM. Assistenku berkomitmen
-              melatih dan menyeleksi tenaga kerja untuk memberikan rasa aman, nyaman, dan profesional kepada pengguna."
-              — <em>Founder Assistenku</em>
+              "Kami percaya kualitas layanan dimulai dari kualitas SDM. Assistenku berkomitmen melatih dan menyeleksi tenaga kerja
+              agar memberikan rasa aman, nyaman, dan profesional kepada pengguna." — <em>Founder Assistenku</em>
             </p>
           </blockquote>
         </div>
@@ -70,7 +67,7 @@
       <div class="grid-3">
         <div class="card">
           <h3>Seleksi Ketat</h3>
-          <p>Proses rekruitmen, verifikasi dokumen, pengecekan latar belakang, dan pelatihan dasar untuk semua kandidat.</p>
+          <p>Screening, verifikasi, pengecekan latar belakang, dan pelatihan dasar untuk semua kandidat.</p>
         </div>
         <div class="card">
           <h3>Standard Operasional</h3>
@@ -78,15 +75,15 @@
         </div>
         <div class="card">
           <h3>Transparansi Harga</h3>
-          <p>Paket harga jelas per jam/hari/bulan, dokumentasi biaya tersedia untuk klien (lihat halaman Layanan).</p>
+          <p>Paket harga jelas per jam/hari/bulan; dokumentasi biaya tersedia untuk klien (lihat halaman Layanan).</p>
         </div>
       </div>
     </section>
 
     <section class="section about">
       <h2>Sejarah Singkat</h2>
-      <p>Didirikan pada 2020, Assistenku lahir dari kebutuhan nyata masyarakat akan tenaga terpercaya. Kami mulai melayani
-      area lokal dan berkembang berdasarkan permintaan — memperkuat proses pelatihan dan pengawasan untuk menjamin layanan.</p>
+      <p>Didirikan pada 2020, Assistenku lahir dari kebutuhan nyata masyarakat akan tenaga terpercaya. Kami mulai dari layanan lokal
+         dan berkembang memperkuat proses pelatihan dan pengawasan untuk memastikan layanan berkualitas.</p>
 
       <h3>Visi & Misi</h3>
       <ul>
