--- a/Karir.html
+++ b/Karir.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body data-page="karir">
-  <header class="site-header">
+  <header class="site-header floating">
     <div class="container header-inner">
       <div class="brand">
         <img src="logo.png" alt="Assistenku Logo" class="logo-img" />
@@ -64,10 +64,7 @@
       <p>Untuk melihat detail sistem gaji dan simulasi perhitungan, gunakan tombol di bawah. Jika dokumen Sistem Gaji dibuka, dokumen Biaya Layanan di halaman Layanan otomatis akan terkunci.</p>
 
       <div class="doc-controls">
-        <!-- Lock button (blue default) -->
         <button class="lock-btn secondary" id="btn-gaji" data-target="doc-gaji">🔒 Kunci — Sistem Gaji</button>
-
-        <!-- Link -->
         <a id="doc-gaji" class="doc-link locked" href="https://drive.google.com/file/d/1UKaP7oSB11vBh2wI1u0qBCkwVF-YHEeD/view?usp=drivesdk" target="_blank" rel="noopener">Lihat Dokumen Sistem Gaji (Google Drive)</a>
       </div>
       <p class="muted">Catatan: dokumen berisi struktur gaji, tunjangan, dan simulasi perhitungan.</p>
