--- a/kontak.html
+++ b/kontak.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body data-page="kontak">
-  <header class="site-header">
+  <header class="site-header floating">
     <div class="container header-inner">
       <div class="brand">
         <img src="logo.png" alt="Assistenku Logo" class="logo-img" />
