--- a/style.css.html
+++ b/style.css.html
@@ -1,4 +1,4 @@
-/* Startup Tech Style — Assistenku */
+/* Startup Tech Style — Clean White/Blue (Navbar floating + shadow) */
 /* Google font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
 
@@ -11,7 +11,7 @@
   --green:#188038;
   --nav-height:72px;
   --radius:12px;
-  --shadow: 0 8px 24px rgba(16,24,40,0.08);
+  --shadow: 0 10px 30px rgba(16,24,40,0.07);
   --max-width:1100px;
 }
 
@@ -28,48 +28,52 @@ body{
 /* layout container */
 .container{width:92%;max-width:var(--max-width);margin:0 auto}
 
-/* Header */
-.site-header{
+/* Floating header */
+.site-header.floating{
   position:sticky;
-  top:0;
+  top:12px;
   z-index:999;
-  background:rgba(255,255,255,0.85);
-  backdrop-filter: blur(6px);
-  border-bottom:1px solid rgba(15,23,42,0.06);
+  margin:12px 0 0 0;
+  background:rgba(255,255,255,0.9);
+  border-radius:14px;
+  box-shadow:var(--shadow);
+  padding:8px 0;
 }
+
+/* header inner */
 .header-inner{
   display:flex;
   align-items:center;
   justify-content:space-between;
   gap:18px;
-  padding:14px 0;
+  padding:8px 0;
 }
 .brand{display:flex;align-items:center;gap:14px}
-.logo-img{height:52px;width:52px;border-radius:10px;object-fit:cover;box-shadow:0 8px 20px rgba(16,24,40,0.06)}
+.logo-img{height:46px;width:46px;border-radius:10px;object-fit:cover;box-shadow:0 8px 20px rgba(16,24,40,0.06)}
 .brand-text{display:flex;flex-direction:column}
-.logo-text{font-weight:700;font-size:18px}
+.logo-text{font-weight:700;font-size:16px}
 .tagline{font-size:12px;color:var(--muted)}
 
 /* controls */
 .controls{display:flex;align-items:center;gap:10px}
-.menu-icon{background:transparent;border:0;font-size:22px;cursor:pointer;padding:8px;border-radius:8px}
-.dark-toggle{background:#fff;border:0;padding:8px;border-radius:8px;cursor:pointer;box-shadow:var(--shadow)}
+.menu-icon{background:transparent;border:0;font-size:20px;cursor:pointer;padding:8px;border-radius:8px}
+.dark-toggle{background:#fff;border:0;padding:8px;border-radius:8px;cursor:pointer;box-shadow:0 6px 18px rgba(16,24,40,0.06)}
 
 /* main nav */
-.main-nav{display:flex;gap:16px;padding:8px 0}
+.main-nav{display:flex;gap:12px;padding:8px 0}
 .main-nav a{text-decoration:none;color:inherit;padding:8px 12px;border-radius:10px;font-weight:600}
-.main-nav a.active{background:linear-gradient(90deg,#eef4ff,#f6fbff);box-shadow:var(--shadow)}
+.main-nav a.active{background:linear-gradient(90deg,#eef4ff,#f6fbff);box-shadow:0 8px 20px rgba(26,115,232,0.06)}
 .main-nav a:hover{color:var(--accent)}
 
 /* hero */
-.hero-startup{padding:40px 0}
-.hero-inner{display:flex;gap:28px;align-items:center;justify-content:space-between}
-.hero-copy{flex:1;max-width:56%}
+.hero-startup{padding:28px 0}
+.hero-inner{display:flex;gap:24px;align-items:center;justify-content:space-between}
+.hero-copy{flex:1;max-width:58%}
 .hero-media{width:40%;display:flex;flex-direction:column;gap:12px;align-items:center}
 .hero-img{width:240px;border-radius:14px;object-fit:cover;box-shadow:0 12px 30px rgba(16,24,40,0.08)}
 .hero-img.small{width:160px;opacity:0.95}
 
-.hero h1{font-size:28px;margin-bottom:8px}
+.hero h1{font-size:26px;margin-bottom:8px}
 .lead{color:var(--muted);font-size:15px;margin-bottom:12px}
 .hero-cta{display:flex;gap:12px;margin-top:12px}
 
@@ -82,9 +86,9 @@ body{
 .section{margin:20px auto}
 .cards h2,.section h2{margin-bottom:12px}
 .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
-.card{background:var(--card);padding:18px;border-radius:12px;box-shadow:var(--shadow)}
+.card{background:var(--card);padding:18px;border-radius:12px;box-shadow:0 10px 30px rgba(16,24,40,0.06)}
 .services-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px}
-.service-card{background:var(--card);padding:18px;border-radius:12px;box-shadow:var(--shadow);transition:transform .18s}
+.service-card{background:var(--card);padding:18px;border-radius:12px;box-shadow:0 10px 30px rgba(16,24,40,0.06);transition:transform .18s}
 .service-card:hover{transform:translateY(-6px)}
 
 /* founder */
@@ -92,7 +96,7 @@ body{
 .founder-img{height:96px;width:96px;border-radius:12px;object-fit:cover}
 
 /* doc controls */
-.doc-section{background:linear-gradient(180deg,#fff,#fbfdff);padding:18px;border-radius:12px;box-shadow:var(--shadow)}
+.doc-section{background:linear-gradient(180deg,#fff,#fbfdff);padding:18px;border-radius:12px;box-shadow:0 10px 30px rgba(16,24,40,0.06)}
 .doc-controls{display:flex;gap:12px;align-items:center;flex-wrap:wrap;margin-top:8px}
 .doc-link{padding:10px 14px;background:transparent;border-radius:10px;text-decoration:none;color:var(--accent);font-weight:700;border:1px solid rgba(26,115,232,0.12)}
 .doc-link.locked{pointer-events:none;opacity:0.45;color:var(--muted);border-color:rgba(0,0,0,0.04)}
@@ -105,7 +109,7 @@ body{
 .lock-btn.secondary.unlocked{background:#047857}        /* hijau tua */
 
 /* job cards */
-.jobs .job{background:var(--card);padding:16px;border-radius:10px;margin-bottom:12px;box-shadow:var(--shadow)}
+.jobs .job{background:var(--card);padding:16px;border-radius:10px;margin-bottom:12px;box-shadow:0 10px 30px rgba(16,24,40,0.06)}
 
 /* contact & form */
 .form{display:flex;flex-direction:column;gap:10px;max-width:640px}
@@ -126,5 +130,5 @@ body{
   .main-nav{display:none}
   .grid-3{grid-template-columns:1fr}
   .logo-img{height:44px;width:44px}
-  .hero h1{font-size:22px}
+  .hero h1{font-size:20px}
 }
