--- a/kontak.html
+++ b/kontak.html
@@ -44,24 +44,44 @@
 
 <section>
   <div class="card-grid">
+    
     <div class="card">
       <h3>WhatsApp</h3>
       <p>Chat langsung dengan admin layanan.</p>
-      <p><b>+62 857-xxx-xxxx</b></p>
+      <p>
+        <a href="https://wa.me/628989760020" class="link-bold" target="_blank">
+          <b>Klik untuk WhatsApp</b>
+        </a>
+      </p>
     </div>
 
     <div class="card">
-      <h3>Email</h3>
-      <p>Kirimkan pertanyaan Anda kapan saja.</p>
-      <p><b>support@assistenku.com</b></p>
+      <h3>Email Layanan</h3>
+      <p>Kirimkan pertanyaan layanan kapan saja.</p>
+      <p>
+        <a href="mailto:kontakassistenku@gmail.com?subject=Info%20lebih%20lanjut%20tentang%20layanan" class="link-bold">
+          <b>kontakassistenku@gmail.com</b>
+        </a>
+      </p>
     </div>
 
     <div class="card">
-      <h3>Lokasi</h3>
-      <p>Depok – Jakarta – Bekasi – Bogor</p>
+      <h3>Email Karir</h3>
+      <p>Kirim pertanyaan terkait lowongan kerja.</p>
+      <p>
+        <a href="mailto:karirassistenku@gmail.com?subject=Pertanyaan%20Lowongan%20Kerja" class="link-bold">
+          <b>karirassistenku@gmail.com</b>
+        </a>
+      </p>
     </div>
+
   </div>
 </section>
+
+<!-- ===== FLOATING WHATSAPP BUTTON ===== -->
+<a href="https://wa.me/628989760020" class="wa-floating" target="_blank">
+  <img src="wa.png" alt="WhatsApp" />
+</a>
 
 <footer>
   © 2025 Assistenku
