--- a/layanan.html
+++ b/layanan.html
@@ -34,107 +34,103 @@
   </div>
 </header>
 
-
 <section style="padding-top:130px;">
   <h2>Layanan Assistenku</h2>
-
   <p>
-    Assistenku menyediakan berbagai jenis layanan asistensi untuk keluarga dan bisnis modern.
-    Setiap tenaga kerja telah melalui proses seleksi, wawancara, verifikasi identitas, serta 
-    pelatihan dasar sebelum siap ditugaskan. Kami berkomitmen memberikan tenaga profesional 
-    yang sopan, sigap, jujur, dan memiliki etika kerja tinggi.
+    Assistenku menyediakan berbagai layanan asistensi profesional yang dirancang untuk membantu
+    keluarga, individu, dan pelaku usaha memenuhi kebutuhan sumber daya manusia yang berkualitas.
+    Setiap tenaga kerja yang kami hadirkan telah melalui seleksi ketat, wawancara mendalam, 
+    dan pembinaan berkelanjutan untuk memastikan standar pelayanan terbaik bagi Anda.
   </p>
 </section>
 
-
 <section>
-  <h2>Daftar Layanan</h2>
-
   <div class="card-grid">
 
     <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
       <p>
-        Tenaga ART terlatih untuk membersihkan rumah, mencuci, menyetrika, menata ruangan, dan 
-        membantu pekerjaan rumah tangga lainnya. Setiap kandidat dibekali pelatihan dasar 
-        kebersihan, etika kerja, komunikasi, dan SOP rumah tangga.
+        Layanan ART ditujukan bagi keluarga yang membutuhkan bantuan dalam menjaga kebersihan rumah,
+        menyiapkan kebutuhan harian, dan mengelola rutinitas domestik dengan rapi dan teratur.
       </p>
+      <ul>
+        <li>Pembersihan rumah harian dan general cleaning</li>
+        <li>Mencuci, menyetrika, dan merapikan pakaian</li>
+        <li>Menyiapkan makanan dasar & menjaga area dapur</li>
+        <li>Mengelola kebutuhan rumah tangga secara menyeluruh</li>
+      </ul>
     </div>
 
-    <!-- Babysitter -->
+    <!-- Caregiver -->
     <div class="card">
-      <h3>Babysitter & Pengasuh Anak</h3>
+      <h3>Caregiver / Pendamping Lansia</h3>
       <p>
-        Pengasuh bayi dan anak dengan pelatihan dasar, termasuk cara menggendong aman, 
-        penanganan bayi, jadwal makan, hingga pendampingan aktivitas harian anak. 
-        Cocok untuk keluarga yang membutuhkan pengawasan ekstra dengan keamanan penuh.
+        Layanan caregiver membantu keluarga yang membutuhkan pendampingan untuk orang tua atau lansia
+        yang memerlukan pemantauan kesehatan, bantuan aktivitas harian, dan perhatian penuh.
       </p>
+      <ul>
+        <li>Membantu mandi dan kebersihan lansia</li>
+        <li>Mengatur obat dan memastikan jadwal konsumsi</li>
+        <li>Menemani aktivitas ringan seperti jalan pagi</li>
+        <li>Mengawasi keamanan dan kondisi fisik lansia</li>
+      </ul>
     </div>
 
     <!-- Driver -->
     <div class="card">
-      <h3>Driver / Sopir Pribadi</h3>
+      <h3>Sopir Pribadi</h3>
       <p>
-        Sopir pribadi berpengalaman, memahami rute kota, disiplin, sopan, dan berkendara 
-        sesuai aturan lalu lintas. Cocok untuk kebutuhan mobilitas keluarga maupun bisnis.
+        Cocok untuk keluarga atau profesional yang membutuhkan pengemudi berpengalaman, 
+        memahami rute, dan dapat menjaga keamanan perjalanan.
       </p>
+      <ul>
+        <li>Mengantar jemput keluarga / perusahaan</li>
+        <li>Menjaga kebersihan dan kondisi kendaraan</li>
+        <li>Mengetahui rute cepat dan aman</li>
+        <li>Mengemudi dengan etika, disiplin, dan sopan</li>
+      </ul>
     </div>
 
-    <!-- Office -->
+    <!-- Toko -->
     <div class="card">
-      <h3>Office Boy/Girl</h3>
+      <h3>Penjaga Toko</h3>
       <p>
-        Membantu kebersihan kantor, penyajian minuman, penataan ruangan, serta kebutuhan operasional 
-        kantor lainnya. Sangat cocok untuk UMKM, kantor startup, dan perusahaan skala besar.
+        Tenaga penjaga toko ideal untuk usaha retail, minimarket, butik, kios, atau bisnis rumahan.
+        Mereka bertugas membantu operasional toko secara menyeluruh.
       </p>
+      <ul>
+        <li>Melayani pelanggan dengan ramah</li>
+        <li>Menata barang dan menjaga kebersihan toko</li>
+        <li>Membantu stok, pengecekan barang, dan catatan harian</li>
+        <li>Menjaga keamanan area toko</li>
+      </ul>
     </div>
 
-    <!-- Kebersihan -->
+    <!-- Lainnya -->
     <div class="card">
-      <h3>Jasa Kebersihan Harian</h3>
+      <h3>Asistensi Lainnya</h3>
       <p>
-        Layanan cleaning harian untuk rumah, kost, apartemen, hingga ruko. 
-        Tenaga cleaning telah dibekali SOP pembersihan dan penggunaan alat pembersih standar.
+        Layanan ini mencakup berbagai jenis pekerjaan seperti asisten pribadi, kurir internal,
+        office helper, hingga tenaga operasional perusahaan.
       </p>
-    </div>
-
-    <!-- Personal Assistant -->
-    <div class="card">
-      <h3>Asisten Pribadi</h3>
-      <p>
-        Mendampingi kegiatan harian, mengatur jadwal, membantu belanja, arsip, administrasi ringan, 
-        hingga kegiatan operasional lainnya. Cocok untuk pebisnis dan individu dengan aktivitas padat.
-      </p>
+      <ul>
+        <li>Membantu aktivitas administrasi ringan</li>
+        <li>Mengelola dokumen dan kebutuhan kantor kecil</li>
+        <li>Pengiriman barang internal (kurir)</li>
+        <li>Tugas operasional sesuai kebutuhan klien</li>
+      </ul>
     </div>
 
   </div>
 </section>
-
 
 <section>
-  <h2>Akses Daftar Kandidat & Dokumen</h2>
+  <h2>Akses Dokumen Layanan</h2>
+  <p>Untuk melihat panduan layanan lengkap Assistenku, klik tombol berikut:</p>
 
-  <p>
-    Kami menyediakan daftar kandidat siap kerja beserta data pendukungnya dalam Google Drive.
-    Untuk menjaga keamanan data, tombol akses ini dilengkapi sistem **Lock–Unlock** sederhana.
-  </p>
-
-  <div style="margin-top:20px;">
-    <button id="unlockBtn" class="btn-primary">Buka Akses</button>
-    <button id="lockBtn" class="btn-secondary" style="margin-left:10px;">Kunci Akses</button>
-  </div>
-
-  <div id="fileAccess" style="margin-top:25px; display:none;">
-    <a href="https://drive.google.com/drive/folders/1lfn1aA2T2zoqHmspt_BKgtp-tclZLPnF?usp=sharing"
-       target="_blank"
-       class="btn-primary"
-       style="display:inline-block;">
-       📂 Buka File Kandidat
-    </a>
-  </div>
+  <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
-
 
 <footer>
   © 2025 Assistenku
